--- a/edit/saml2int/contributors.adoc
+++ b/edit/saml2int/contributors.adoc
@@ -1,4 +1,4 @@
-.Contributors - V2.0
+.Contributors (V2.0)
 * Keith Wessel (University of Illinois at Urbana-Champaign) - _Editor_
 * Scott Cantor (Ohio State University)
 * Eric Goodman (University of California, Office of the President)
@@ -11,7 +11,7 @@
 * Nicholas Roy (Internet2)
 * Alan Buxey (MyUniDays, LTD.)
 
-.Contributors - previous versions
+.Contributors (previous versions)
 * Andreas Åkre Solberg (UNINETT)
 * Eve Maler (ForgeRock)
 * Leif Johansson (SUNET)
