--- a/edit/saml2int/main.adoc
+++ b/edit/saml2int/main.adoc
@@ -22,7 +22,7 @@ Status:: This document is a Kantara Initiative Group Editors' Draft Document pro
 include::contributors.adoc[]
 
 .Abstract
-This profile specifies behavior and options that deployments of the SAML V2.0 Web Browser SSO Profile <<SAML2Prof>>, and related profiles, are required or permitted to rely on. This deployment profile should not be confused with a SAML implementation profile, such as <<SAML2Impl>>. A deployment profile specifies how software should be configured given a specific set of deployment goals. An implementation profile tells software developers how they must implement their software in order to meet basic requirements.
+This profile specifies behavior and options that deployments of the SAML V2.0 Web Browser SSO profile <<SAML2Prof>>, and related profiles, are required or permitted to rely on. This deployment profile should not be confused with a SAML implementation profile, such as <<SAML2Impl>>. A deployment profile specifies how software should be configured given a specific set of deployment goals. An implementation profile tells software developers how they must implement their software in order to meet basic requirements.
 
 .Copyright Notice
 SAML V2.0 Deployment Profile for Federation Interoperability ©2019 by the respective contributors, used under license.  All rights reserved.
