--- a/edit/saml2int/common_requirements.adoc
+++ b/edit/saml2int/common_requirements.adoc
@@ -12,7 +12,7 @@ _The following is a non-exhaustive list of items to which this directive applies
 
 ===== Data Size
 
-[SDP-G02]:: Unless otherwise specified, deployments MUST limit the size of all XML element and attribute values they produce to 256 characters per element or attribute value. This applies in particular to the values within `<saml:NameID>` and `<saml:AttributeValue>` elements.
+[SDP-G02]:: Unless otherwise specified, deployments MUST limit the size of each individual XML element's and XML attribute's text value they produce to 256 characters. This applies in particular to the values within `<saml:NameID>` and `<saml:AttributeValue>` elements.
 
 ===== Document Type Definitions
 
