--- a/edit/saml2int/main.adoc
+++ b/edit/saml2int/main.adoc
@@ -15,9 +15,9 @@ SAML V2.0 Deployment Profile for Federation Interoperability
 
 [horizontal]
 Version:: 2.00
-Date:: {docdate}
+Date:: 2019-12-09
 Location:: https://kantarainitiative.github.io/SAMLprofiles/saml2int.html
-Status:: Approved by Kantara Initiative member ballot
+Status:: This Group Recommendation Specification was developed and approved by the Federation Interoperability Working Group (FIWG) and later approved by All Member Ballot on 2020-02-26. <a href="https://kantarainitiative.org/confluence/display/GI/All+Policies?preview=/37750179/104600198/KI%20Operating%20Procedures%20Version%203.0.pdf>See the Kantara Initiative Operating Procedures for more information.</a>
 
 include::contributors.adoc[]
 
@@ -39,4 +39,3 @@ include::sp_requirements.adoc[]
 include::idp_requirements.adoc[]
 
 include::references.adoc[]
-
